# maybe

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
maybe/: cli.py
maybe/commands/: serve.py
