[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "maybe"
version = "1.0.0"
description = "creating a local server from themaybe"
authors = [{ name = "ithemaybe", email = "none" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["click>=8.0"]

[project.urls]
Homepage = "https://github.com/ithemaybe/maybe"

[project.scripts]
maybe = "maybe.cli:main"
