[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maybe"
version = "1.0.0"
description = "Personal CLI toolkit by ithemaybe"
authors = [{ name = "ithemaybe", email = "ithemaybe@proton.me" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["click>=8.0"]

[project.urls]
Homepage = "https://github.com/ithemaybe/maybe"

[project.scripts]
maybe = "maybe.cli:main"
